Try out editing MD

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,60 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Welcome to Glanceables: Your hub for efficient knowledge management and document processing"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+## Getting Started
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
+Welcome to **Glanceables**, the platform designed to simplify **knowledge management** and enhance **document processing**. Setting up your editing environment is the first step toward creating streamlined, professional documentation tailored to your needs.
 
 <CardGroup cols={2}>
   <Card
     title="Edit Your Docs"
     icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    href="/quickstart"
   >
-    Get your docs set up locally for easy development
+    Configure your documentation locally for seamless updates and development.
   </Card>
   <Card
     title="Preview Changes"
     icon="image"
-    href="https://mintlify.com/docs/development"
+    href="/development"
   >
-    Preview your changes before you push to make sure they're perfect
+    Ensure your edits are polished and accurate before publishing.
   </Card>
 </CardGroup>
 
-## Make it yours
+## Customize Your Documentation
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Take your documentation to the next level with Glanceables. From branding and API integration to advanced **document processing** features, our platform adapts to your unique workflows.
 
 <CardGroup cols={2}>
   <Card
     title="Customize Style"
     icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    href="/global"
   >
-    Customize your docs to your company's colors and brands
+    Tailor your documentation with your company’s branding and visual identity.
   </Card>
   <Card
     title="Reference APIs"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="https://glanceables.com/docs/api-playground/openapi"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Automatically generate API endpoints using your OpenAPI specification.
   </Card>
   <Card
-    title="Add Components"
+    title="Add Interactive Components"
     icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    href="https://glanceables.com/docs/components/accordion"
   >
-    Build interactive features and designs to guide your users
+    Create an interactive knowledge base with features that simplify complex information for users.
   </Card>
   <Card
-    title="Get Inspiration"
+    title="Explore Use Cases"
     icon="stars"
-    href="https://mintlify.com/customers"
+    href="https://glanceables.com/customers"
   >
-    Check out our showcase of our favorite documentation
+    See how others are leveraging Glanceables for advanced **knowledge management** and documentation success.
   </Card>
 </CardGroup>
