--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,62 +1,49 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Welcome to Glanceables: Your hub for efficient knowledge management and document processing'
 ---
 
-## Setup your development
+## Set Up Your Development Environment
 
-Learn how to update your docs locally and deploy them to the public.
+Learn how to edit, preview, and publish your documentation with ease.
 
-### Edit and preview
+### Edit and Preview Your Docs
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="github" title="Clone Your Documentation Repository">
+    As part of the onboarding process, a repository containing your documentation was created on your GitHub. You can access this repository via the [dashboard](https://dashboard.mintlify.com). To work on your docs locally, clone the repository to your computer by following these [GitHub cloning instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository).
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
+  <Accordion icon="rectangle-terminal" title="Preview Changes Locally">
+    Previewing your changes ensures your documentation is accurate and polished before publishing. With the **Mintlify CLI**, you can easily render and test updates locally:
+    1. Install the [Mintlify CLI](https://www.npmjs.com/package/mintlify) by running:  
+       ``` npm i -g mintlify ```
+    2. Navigate to the root of your documentation (where `mint.json` is located) and run:  
+       ``` mintlify dev ```
+    This will open a local server to preview your edits.
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+### Deploy Your Documentation
 
 <AccordionGroup>
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
+<Accordion icon="message-bot" title="Install the GitHub App">
+  Simplify deployment with our GitHub app, which automates publishing your documentation changes. Install the app from your [dashboard](https://dashboard.mintlify.com). Once installed, a checkmark will appear next to the commit hash in your repository, confirming successful deployment.
 </Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
+<Accordion icon="rocket" title="Push Your Changes to Deploy">
+  After editing, commit and push your changes to your GitHub repository. For guidance, refer to [Git's push documentation](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push). If automatic deployment doesn’t work, you can manually update your site from the [dashboard](https://dashboard.mintlify.com).
 </Accordion>
 
 </AccordionGroup>
 
-## Update your docs
+## Customize Your Documentation
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+Make your documentation visually appealing, interactive, and insightful with MDX syntax, React components, and built-in features.
 
 <CardGroup>
 
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
+<Card title="Style Your Documentation" icon="paintbrush" href="/settings/global">
+  Enhance your branding and make your docs stand out with custom styles and themes.
 </Card>
 
 <Card
@@ -64,7 +51,7 @@ Add content directly in your files with MDX syntax and React components. You can
   icon="square-code"
   href="/api-playground/configuration"
 >
-  Implement your OpenAPI spec and enable API user interaction.
+  Integrate your OpenAPI specification for seamless API interaction directly in your documentation.
 </Card>
 
 <Card
@@ -72,7 +59,7 @@ Add content directly in your files with MDX syntax and React components. You can
   icon="chart-mixed"
   href="/analytics/supported-integrations"
 >
-  Draw insights from user interactions with your documentation.
+  Gain valuable insights with analytics tools to track user engagement and optimize your documentation.
 </Card>
 
 <Card
@@ -80,7 +67,18 @@ Add content directly in your files with MDX syntax and React components. You can
   icon="browser"
   href="/settings/custom-domain/subdomain"
 >
-  Keep your docs on your own website's subdomain.
+  Build trust and maintain consistency by hosting your documentation on your website's subdomain.
 </Card>
 
 </CardGroup>
+
+---
+
+### Why Use This Quickstart?
+
+Whether you’re creating a **knowledge base**, enhancing **workflow automation**, or simplifying **document processing**, this Quickstart guide gives you the tools and best practices to:
+- Streamline your team’s **knowledge management**.
+- Keep your documentation up to date with ease.
+- Deliver interactive, user-friendly experiences.
+
+Let **Mintlify and Glanceables** power your journey to building smarter documentation that works for you.
